--- a/index.html
+++ b/index.html
@@ -1209,14 +1209,17 @@
           </div> -->
 
           <p>
-            All the data examples were divided into two subsets: testmini and test. 
+            All the data examples were divided into four subsets: single_en,single_cn,multi_en and multi_cn. 
             <!-- @PAN TODO: add download links -->
             <ul>
-              <li><b>testmini</b>: 1,000 examples used for model development, validation, or for those with limited computing resources.</li>
-              <li><b>test</b>: 5,141 examples for standard evaluation. Notably,
+              <li><b>single_en</b>: 1,000 examples used for model development, validation, or for those with limited computing resources.</li>
+              <li><b>single_cn</b>: 5,141 examples for standard evaluation. Notably,
+                the answer labels for test will NOT be publicly released.</li>
+              <li><b>multi_en</b>: 1,000 examples used for model development, validation, or for those with limited computing resources.</li>
+              <li><b>mulit_cn</b>: 5,141 examples for standard evaluation. Notably,
                 the answer labels for test will NOT be publicly released.</li>
             </ul>
-            You can download the dataset on <a href="https://huggingface.co/datasets/AI4Math/MathVista" target="_blank">Hugging Face Dataset</a>.
+            You can download the dataset on <a href="https://huggingface.co/datasets/yangsongyuan18/wildvideo" target="_blank">Hugging Face Dataset</a>.
           </p>
 
         </div>
@@ -1237,7 +1240,7 @@
           <img src="static/images/data-composition.png" alt="data-composition" style="max-width: 56%;"/>
           <p>
               Source dataset distribution of <img src="static/images/mathvista.png" style="width:1.0em;vertical-align: middle" alt="Logo"/>
-              <span class="mathvista">MathVista</span>.<br/>
+              <span class="mathvista">Wldvideo</span>.<br/>
               <b>FQA</b>: figure question answering,
               <b>GPS</b>: geometry problem solving,<br/>
               <b>MWP</b>: math word problem,
