--- a/index.html
+++ b/index.html
@@ -1170,14 +1170,19 @@
         <h2 class="title is-3">Overview</h2>
         <div class="content has-text-justified">
           <p>
-            <img src="static/images/mathvista.png" style="width:1.0em;vertical-align: middle" alt="Logo"/>
-            <span class="mathvista">MathVista</span> is a consolidated Mathematical reasoning benchmark within
-            Visual contexts. It consists of <b>three newly created datasets, IQTest, FunctionQA, and PaperQA</b>, which address the missing visual domains and are tailored to evaluate logical reasoning on puzzle test figures,
-            algebraic reasoning over functional plots, and scientific reasoning with academic paper figures, respectively. It also incorporates <b>9 MathQA datasets</b>
-            and <b>19 VQA datasets</b> from the literature, which significantly enrich the diversity and complexity of
-            visual perception and mathematical reasoning challenges within our benchmark. 
-            In total, <img src="static/images/mathvista.png" style="width:1.0em;vertical-align: middle" alt="Logo"/>
-            <span class="mathvista">MathVista</span> includes <b>6,141 examples</b> collected from <b>31 different datasets</b>.
+            To solve the challenges as mentioned above, we introduce
+            WildVideo, a bilingual benchmark for evaluating hallucinations
+            in video-based LMMs, fully aligned with real-world application
+            settings. First, WildVideo incorporates multi-turn dialogues,
+            enabling the evaluation of contextual understanding and dy-
+            namic conversational flows. Second, to mitigate the limitations
+            of unimodal references, WildVideo emphasizes the integration
+            of multimodal references, such as visual cues paired with tex-
+            tual input, which reflect the natural referencing mechanisms
+            in human conversations. Furthermore, it incorporates deep vi-
+            sual contextual understanding by addressing challenges like
+            contextual ellipsis and cross-turn retrieval, which require models to maintain and utilize information across multiple dialogue
+            turns. 
             <!-- a compilation of data 1) carefully examined and filtered from 28 existing VQA and MathQA datasets and 2) manually collected by us. In total, 6,141 examples were collected from 31 different datasets. -->
           </p>
 
@@ -1231,7 +1236,7 @@
           <img src="static/images/statistics.png" alt="data-overview" style="max-width: 50%;"/>
           <p> 
             Key statistics of <img src="static/images/mathvista.png" style="width:1.0em;vertical-align: middle" alt="Logo"/>
-            <span class="mathvista">MathVista</span>.<br/>
+            <span class="mathvista">WildVideo</span>.<br/>
           </p> 
         </div>
       </div>
@@ -1241,11 +1246,11 @@
           <p>
               Source dataset distribution of <img src="static/images/mathvista.png" style="width:1.0em;vertical-align: middle" alt="Logo"/>
               <span class="mathvista">Wldvideo</span>.<br/>
-              <b>FQA</b>: figure question answering,
+              <!-- <b>FQA</b>: figure question answering,
               <b>GPS</b>: geometry problem solving,<br/>
               <b>MWP</b>: math word problem,
               <b>TQA</b>: textbook question answering,<br/>
-              <b>VQA</b>: visual question answering.
+              <b>VQA</b>: visual question answering. -->
           </p>
         </div>
       </div>
