Add benchmark comparison and definitions figures to homepage

--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@
       <div class="column is-full has-text-centered content">
         <h2 class="title is-3" id="leaderboard">Leaderboard on WildVideo (single)</h2>
         <div class="content">
-          <p class="mt-3">Accuracy scores on the <b>testmini</b> subset (1,000 examples) of <img src="static/images/mathvista.png" style="width:1.0em;vertical-align: middle" alt="Logo"/>
-            <span class="mathvista">MathVista</span>.
+          <p class="mt-3">Accuracy scores on the <b>single</b> subset (1,000 examples) of <img src="static/images/mathvista.png" style="width:1.0em;vertical-align: middle" alt="Logo"/>
+            <span class="mathvista">WildVideo</span>.
           </p>
 
           <div id="testmini_leaderboard"></div>
@@ -841,8 +841,8 @@
 
         <h2 class="title is-3" id="leaderboard_test">Leaderboard on Wildvideo (multi)</h2>
         <div class="content">
-          <p class="mt-3">Accuracy scores on the <b>test</b> subset (5,141 examples with <b>private</b> ground truth) of <img src="static/images/mathvista.png" style="width:1.0em;vertical-align: middle" alt="Logo"/>
-            <span class="mathvista">MathVista</span>.
+          <p class="mt-3">Accuracy scores on the <b>multi</b> subset (5,141 examples with <b>private</b> ground truth) of <img src="static/images/mathvista.png" style="width:1.0em;vertical-align: middle" alt="Logo"/>
+            <span class="mathvista">Wildvideo</span>.
           </p>
 
           <table class="js-sort-table" id="results">
@@ -1179,15 +1179,14 @@
           <div id="results-carousel" class="carousel results-carousel">
             <div class="box m-5">
               <div class="content has-text-centered">
-                <img src="static/images/our_new_3_datasets.png" alt="algebraic reasoning" width="80%"/>
-                <p> Examples of our newly annotated datasets: IQTest, FunctionQA, and PaperQA.</p>
+                <img src="static/images/definitions.png" alt="algebraic reasoning" width="80%"/>
+                <p> Task definitions in WildVideo</p>
               </div>
             </div>
             <div class="box m-5">
               <div class="content has-text-centered">
-                <img src="static/images/source_dataset.png" alt="arithmetic reasoning" width="50%"/>
-                <p> Summary of the 31 different source datasets in <img src="static/images/mathvista.png" style="width:1.0em;vertical-align: middle" alt="Logo"/>
-                  <span class="mathvista">MathVista</span>.
+                <img src="static/images/compare_benchmark.png" alt="arithmetic reasoning" width="50%"/>
+                <p> compares WildVideo (ours) with a bunch of existing image and video QA benchmarks along several axes.</p>
               </div>
             </div>
           </div>
