--- a/index.html
+++ b/index.html
@@ -1244,42 +1244,42 @@
     
     <div class="columns is-centered m-6">
       <div class="column is-full has-text-centered content">
-        <h2 class="title is-3">Examples</h2>
+        <h2 class="title is-3">Dataset statistics</h2>
         <p>One example for each <b>mathematical reasoning</b> skill required in <img src="static/images/mathvista.png" style="width:1.0em;vertical-align: middle" alt="Logo"/>
           <span class="mathvista">MathVista</span></p>
 
         <div id="results-carousel" class="carousel results-carousel">
           <div class="box m-5">
             <div class="content has-text-centered">
-              <img src="static/images/examples/ari.png" alt="arithmetic reasoning" width="60%"/>
-              <p>Arithmetic Reasoning</p>
+              <img src="static/images/Dataset_statistics/Single_turn_questions.png" alt="arithmetic reasoning" width="60%"/>
+              <p>Single-turn questions</p>
             </div>
           </div>
           <div class="box m-5">
             <div class="content has-text-centered">
-              <img src="static/images/examples/alg.png" alt="algebraic reasoning" width="60%"/>
-              <p>Algebraic Reasoning</p>
+              <img src="static/images/Dataset_statistics/Multi_turn_questions.png" alt="algebraic reasoning" width="60%"/>
+              <p>Multi_turn questions</p>
             </div>
           </div>
           <div class="box m-5">
             <div class="content has-text-centered">
-              <img src="static/images/examples/geo.png" alt="geometric reasoning" width="60%"/>
-              <p>Geometric Reasoning</p>
+              <img src="static/images/Dataset_statistics/Duration_distribution.png" alt="geometric reasoning" width="60%"/>
+              <p>Duration distribution of videos in our benchmark.</p>
             </div>
           </div>
           <div class="box m-5">
             <div class="content has-text-centered">
-              <img src="static/images/examples/log.png" alt="logical reasoning" width="60%"/>
-              <p>Logical Reasoning</p>
+              <img src="static/images/Dataset_statistics/distribution.png" alt="logical reasoning" width="60%"/>
+              <p>Distribution of question counts across turns in multi-turn dialogues.</p>
             </div>
           </div>
-          <div class="box m-5">
+          <!-- <div class="box m-5">
             <div class="content has-text-centered">
               <img src="static/images/examples/num.png" alt="numeric reasoning" width="60%"/>
               <p>Numeric Reasoning</p>
             </div>
-          </div>
-          <div class="box m-5">
+          </div> -->
+          <!-- <div class="box m-5">
             <div class="content has-text-centered">
               <img src="static/images/examples/sta.png" alt="statistical reasoning" width="60%"/>
               <p>Statistical Reasoning</p>
@@ -1290,7 +1290,7 @@
               <img src="static/images/examples/sci.png" alt="scientific reasoning" width="60%"/>
               <p>Scientific Reasoning</p>
             </div>
-          </div>
+          </div> -->
 
           
         </div>
@@ -1455,12 +1455,6 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
-    <div class="columns is-centered m-6">
-      <div class="column is-max-desktop has-text-centered">
-        <h2 class="title is-3" id="visualization">Visualization</h2>
-        <iframe src="visualizer/explore.html" style="width: 100%;min-height: 100vh; border-radius: 20px;"></iframe>
       </div>
     </div>
   </div>
