Update homepage content

--- a/index.html
+++ b/index.html
@@ -125,23 +125,23 @@
           </h2>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://lupantech.github.io/">Songyuan Yang</a><sup style="color:#6fbf73;">1</sup>,</span>
+              <a>Songyuan Yang</a><sup style="color:#6fbf73;">1</sup>,</span>
             <span class="author-block">
-              <a href="https://sites.google.com/view/hbansal">Weijiang Yu</a><sup style="color:#6fbf73;">1</sup>,</span>
+              <a>Weijiang Yu</a><sup style="color:#6fbf73;">1</sup>,</span>
             <span class="author-block">
-              <a href="https://tonyxia2001.github.io/">Wenjing Yang</a><sup style="color:#6fbf73;">1</sup>,
+              <a>Wenjing Yang</a><sup style="color:#6fbf73;">1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://liujch1998.github.io/">Xinwang Liu</a><sup style="color:#ed4b82">2</sup>,
+              <a>Xinwang Liu</a><sup style="color:#ed4b82">2</sup>,
             </span>
             <span class="author-block">
-              <a href="https://chunyuan.li/">Huibin Tan</a><sup style="color:#ffac33">3</sup>,
+              <a>Huibin Tan</a><sup style="color:#ffac33">3</sup>,
             </span>
             <span class="author-block">
-              <a href="https://homes.cs.washington.edu/~hannaneh/">Long Lan</a><sup style="color:#ed4b82">2</sup>,
+              <a>Long Lan</a><sup style="color:#ed4b82">2</sup>,
             </span>
             <span class="author-block">
-              <a href="https://sites.google.com/site/hcheng2site/Home">Nong Xiao</a><sup style="color:#ffac33">3</sup>,
+              <a>Nong Xiao</a><sup style="color:#ffac33">3</sup>,
             </span>
           </div>
 
