--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
       <div class="column is-full has-text-centered content">
         <h2 class="title is-3" id="leaderboard">Leaderboard on WildVideo (single)</h2>
         <div class="content">
-          <p class="mt-3">Accuracy scores on the <b>single</b> subset (1,000 examples) of <img src="static/images/mathvista.png" style="width:1.0em;vertical-align: middle" alt="Logo"/>
+          <p class="mt-3">Accuracy scores on the <b>single</b> subset (13,704 single-turn QA pairs) of 
             <span class="mathvista">WildVideo</span>.
           </p>
 
@@ -841,7 +841,7 @@
 
         <h2 class="title is-3" id="leaderboard_test">Leaderboard on Wildvideo (multi)</h2>
         <div class="content">
-          <p class="mt-3">Accuracy scores on the <b>multi</b> subset (5,141 examples with <b>private</b> ground truth) of <img src="static/images/mathvista.png" style="width:1.0em;vertical-align: middle" alt="Logo"/>
+          <p class="mt-3">Accuracy scores on the <b>multi</b> subset (1,585 multi-turn QA pairs) of 
             <span class="mathvista">Wildvideo</span>.
           </p>
 
@@ -1206,8 +1206,8 @@
             All the data examples were divided into two subsets: single and multi. 
             <!-- @PAN TODO: add download links -->
             <ul>
-              <li><b>single</b>: 1,000 examples used for model development, validation, or for those with limited computing resources.</li>
-              <li><b>multi</b>: 1,000 examples used for model development, validation, or for those with limited computing resources.</li>
+              <li><b>single</b>: 1,318 meticulously curated videos and 13,704 single-turn QA pairs</li>
+              <li><b>multi</b>: 1,318 meticulously curated videos and 1,585 multi-turn QA pairs</li>
             </ul>
             You can download the dataset on <a href="https://huggingface.co/datasets/yangsongyuan18/wildvideo" target="_blank">Hugging Face Dataset</a>.
           </p>
