--- a/index.html
+++ b/index.html
@@ -202,12 +202,12 @@
               </span> -->
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/lupantech/MathVista"
+                <a href="https://github.com/yangsongyuan18/WildVideo"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code</span>
+                  <span>Git Hub</span>
                   </a>
               </span>
               <!-- Dataset Link. -->
