--- a/index.html
+++ b/index.html
@@ -125,23 +125,23 @@
           </h2>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a>Songyuan Yang</a><sup style="color:#6fbf73;">1</sup>,</span>
+              <a>Songyuan Yang</a>,</span>
             <span class="author-block">
-              <a>Weijiang Yu</a><sup style="color:#6fbf73;">1</sup>,</span>
+              <a>Weijiang Yu</a>,</span>
             <span class="author-block">
-              <a>Wenjing Yang</a><sup style="color:#6fbf73;">1</sup>,
+              <a>Wenjing Yang</a>,
             </span>
             <span class="author-block">
-              <a>Xinwang Liu</a><sup style="color:#ed4b82">2</sup>,
+              <a>Xinwang Liu</a>,
             </span>
             <span class="author-block">
-              <a>Huibin Tan</a><sup style="color:#ffac33">3</sup>,
+              <a>Huibin Tan</a>,
             </span>
             <span class="author-block">
-              <a>Long Lan</a><sup style="color:#ed4b82">2</sup>,
+              <a>Long Lan</a>,
             </span>
             <span class="author-block">
-              <a>Nong Xiao</a><sup style="color:#ffac33">3</sup>,
+              <a>Nong Xiao</a>,
             </span>
           </div>
 
@@ -168,9 +168,9 @@
 
           <div class="column has-text-centered">
             <div class="publication-links">
-              <!-- PDF Link. -->
+              <!-- PDF Link.
               <span class="link-block">
-                <!-- @PAN TODO: change links -->
+                @PAN TODO: change links
                 <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=11097075&tag=1"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -178,7 +178,7 @@
                   </span>
                   <span>Paper</span>
                 </a>
-              </span>
+              </span> -->
               <span class="link-block">
                 <a href="https://ieeexplore.ieee.org/document/11097075"
                    class="external-link button is-normal is-rounded is-dark">
