Update homepage content for WildVideo

--- a/index.html
+++ b/index.html
@@ -1176,7 +1176,7 @@
             <!-- a compilation of data 1) carefully examined and filtered from 28 existing VQA and MathQA datasets and 2) manually collected by us. In total, 6,141 examples were collected from 31 different datasets. -->
           </p>
 
-          <div id="results-carousel" class="carousel results-carousel">
+          <div id="results-carousel">
             <div class="box m-5">
               <div class="content has-text-centered">
                 <img src="static/images/definitions.png" alt="algebraic reasoning" width="80%"/>
@@ -1303,7 +1303,7 @@
       <div class="column is-full has-text-centered content">
         <h2 class="title is-3">EXPERIMENT RESULT</h2>
         <p>Comparison of the capabilities of different LMMs on WildVideo.</p>
-        <div id="results-carousel" class="carousel results-carousel">
+        <div id="results-carousel">
           <div class="box m-5">
             <div class="content has-text-centered">
               <img src="static/images/Experiment/Single_turn.png" alt="context" class="stats-image">
