Update homepage content for WildVideo

--- a/index.html
+++ b/index.html
@@ -51,6 +51,18 @@
 
   <script src="./visualizer/data/data_public.js" defer></script>
 </head>
+
+<style>
+
+  #wildvideo-single {
+    border-collapse: collapse;
+  }
+
+  #wildvideo-single th,
+  #wildvideo-single td {
+    border: 1px solid #cccccc;
+  }
+</style>
 <body>
 
 <nav class="navbar" role="navigation" aria-label="main navigation">
