Update homepage content for WildVideo

--- a/index.html
+++ b/index.html
@@ -364,99 +364,99 @@
               </tr>
 
               <tr>
-                <td>Mono-InternVL-2B</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
+                <td><b>Mono-InternVL-2B</b></td>
+                <td>36.2</td>
+                <td>15.6</td>
+                <td>22.2</td>
+                <td>26.9</td>
+                <td>20.7</td>
+                <td>11.0</td>
+                <td>21.3</td>
+                <td>22.0</td>
               </tr>
 
               <tr>
-                <td>Video-LLaVA-7B</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
+                <td><b>Video-LLaVA-7B</b></td>
+                <td>43.9</td>
+                <td>25.8</td>
+                <td>23.8</td>
+                <td>40.1</td>
+                <td>36.9</td>
+                <td>27.1</td>
+                <td>45.6</td>
+                <td>34.7</td>
               </tr>
 
               <tr>
-                <td>InternVL2-8B</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
+                <td><b>InternVL2-8B</b></td>
+                <td>42.0</td>
+                <td>27.9</td>
+                <td>33.2</td>
+                <td>40.5</td>
+                <td>37.4</td>
+                <td>28.4</td>
+                <td>37.3</td>
+                <td>35.2</td>
               </tr>
 
               <tr>
-                <td>VideoLLaMA2-7B</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
+                <td><b>VideoLLaMA2-7B</b></td>
+                <td>52.6</td>
+                <td>34.3</td>
+                <td>33.0</td>
+                <td>46.7</td>
+                <td>39.9</td>
+                <td>41.9</td>
+                <td>48.9</td>
+                <td>42.5</td>
               </tr>
 
               <tr>
-                <td>Ovis1.6-Gemma-2-9B</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
+                <td><b>Ovis1.6-Gemma-2-9B</b></td>
+                <td>58.5</td>
+                <td>27.6</td>
+                <td>28.6</td>
+                <td>41.6</td>
+                <td>42.5</td>
+                <td>44.0</td>
+                <td><b>57.7</b></td>
+                <td>42.9</td>
               </tr>
 
               <tr>
-                <td>Qwen2-VL-7B</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
+                <td><b>Qwen2-VL-7B</b></td>
+                <td>52.5</td>
+                <td>30.3</td>
+                <td>36.1</td>
+                <td>47.8</td>
+                <td>47.6</td>
+                <td>36.2</td>
+                <td>50.9</td>
+                <td>43.1</td>
               </tr>
 
               <tr>
-                <td>MiniCPM-V2.6-8B</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
+                <td><b>MiniCPM-V2.6-8B</b></td>
+                <td>57.4</td>
+                <td>39.2</td>
+                <td>41.5</td>
+                <td>57.3</td>
+                <td>51.5</td>
+                <td>36.4</td>
+                <td>41.8</td>
+                <td>46.4</td>
               </tr>
 
               <tr>
                 <td>LLaVA-Video-7B-Qwen2</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
+                <td><b>63.0</b></td>
+                <td><b>50.7</b></td>
+                <td><b>47.3</b></td>
+                <td><b>58.9</b></td>
+                <td><b>60.6</b></td>
+                <td><b>47.6</b></td>
+                <td><b>46.0</b></td>
+                <td><b>53.4</b></td>
               </tr>
 
               <tr>
@@ -464,75 +464,75 @@
               </tr>
 
               <tr>
-                <td>Claude 3.5 Sonnet</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
+                <td><b>Claude 3.5 Sonnet</b></td>
+                <td>50.0</td>
+                <td>43.5</td>
+                <td>39.7</td>
+                <td>50.5</td>
+                <td>36.1</td>
+                <td>53.2</td>
+                <td>49.8</td>
+                <td>46.1</td>
               </tr>
 
               <tr>
-                <td>Gemini 1.5 Flash</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
+                <td><b>Gemini 1.5 Flash</b></td>
+                <td>67.7</td>
+                <td>38.2</td>
+                <td>42.4</td>
+                <td>50.6</td>
+                <td>33.6</td>
+                <td>49.3</td>
+                <td>66.7</td>
+                <td>49.8</td>
               </tr>
 
               <tr>
-                <td>Gemini 1.5 Pro</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
+                <td><b>Gemini 1.5 Pro</b></td>
+                <td>67.1</td>
+                <td>50.4</td>
+                <td>43.6</td>
+                <td>59.3</td>
+                <td>42.6</td>
+                <td>54.7</td>
+                <td>57.8</td>
+                <td>53.7</td>
               </tr>
 
               <tr>
-                <td>GPT-4V</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
+                <td><b>GPT-4V</b></td>
+                <td>57.0</td>
+                <td>39.7</td>
+                <td>34.2</td>
+                <td>54.9</td>
+                <td>39.2</td>
+                <td>54.0</td>
+                <td>69.7</td>
+                <td>49.8</td>
               </tr>
 
               <tr>
-                <td>GPT-4o mini</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
+                <td><b>GPT-4o mini</b></td>
+                <td>61.4</td>
+                <td>45.3</td>
+                <td>41.9</td>
+                <td>52.9</td>
+                <td>52.0</td>
+                <td>47.9</td>
+                <td>71.8</td>
+                <td>53.3</td>
               </tr>
 
               <tr>
-                <td>GPT-4o</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
-                <td>XX.X</td>
+                <td><b>GPT-4o</b></td>
+                <td><b>68.2</b></td>
+                <td><b>54.2</b></td>
+                <td><b>51.5</b></td>
+                <td><b>66.5</b></td>
+                <td><b>59.2</b></td>
+                <td><b>61.4</b></td>
+                <td><b>73.6</b></td>
+                <td><b>62.1</b></td>
               </tr>
             </tbody>
           </table>
