--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
               </tr>
 
               <tr>
-                <td>LLaVA-Video-7B-Qwen2</td>
+                <td><b>LLaVA-Video-7B-Qwen2</b></td>
                 <td><b>63.0</b></td>
                 <td><b>50.7</b></td>
                 <td><b>47.3</b></td>
@@ -542,265 +542,185 @@
             All numbers are accuracies in %, with a full score of 100%.
           </p>
 
-        <h2 class="title is-3" id="leaderboard_test">Leaderboard on Wildvideo (multi)</h2>
-        <div class="content">
-          <p class="mt-3">Accuracy scores on the <b>multi</b> subset (1,585 multi-turn QA pairs) of 
-            <span class="mathvista">Wildvideo</span>.
-          </p>
+        <h2 class="title is-3" id="leaderboard-multi">
+          Leaderboard on WildVideo (Multi-Turn)
+        </h2>
+        <p class="mt-3">
+          Accuracy (%) on the <b>multi-turn</b> subset (1,585 dialogues, up to 5 turns) of
+          <span class="mathvista">WildVideo</span>.
+        </p>
 
-          <table class="js-sort-table" id="results">
+        <table class="table is-striped is-hoverable is-fullwidth js-sort-table" id="wildvideo-multi">
+          <thead>
             <tr>
-                <td class="js-sort-number"><strong>#</strong></td>
-                <td class="js-sort-number"><strong>Model</strong></td>
-                <td class="js-sort-number"><strong>Method</strong></td>
-                <td class="js-sort-number"><strong>Source</strong></td>
-                <td class="js-sort-number"><strong>Date</strong></td>
-                <td class="js-sort-number"><strong><u>ALL</u></strong></td>
-                <td class="js-sort-number"><strong>FQA</strong></td>
-                <td class="js-sort-number"><strong>GPS</strong></td>
-                <td class="js-sort-number"><strong>MWP</strong></td>
-                <td class="js-sort-number"><strong>TQA</strong></td>
-                <td class="js-sort-number"><strong>VQA</strong></td>
-                <td class="js-sort-number"><strong>ALG</strong></td>
-                <td class="js-sort-number"><strong>ARI</strong></td>
-                <td class="js-sort-number"><strong>GEO</strong></td>
-                <td class="js-sort-number"><strong>LOG</strong></td>
-                <td class="js-sort-number"><strong>NUM</strong></td>
-                <td class="js-sort-number"><strong>SCI</strong></td>
-                <td class="js-sort-number"><strong>STA</strong></td>
+              <th rowspan="2">Model</th>
+              <th colspan="4" class="has-text-centered">Perception</th>
+              <th colspan="3" class="has-text-centered">Cognition</th>
+              <th colspan="2" class="has-text-centered">Contextual Comprehension</th>
+              <th rowspan="2">Overall</th>
             </tr>
             <tr>
-              <td>1</td>
-              <td><b class="best-score-text">InternVL2-Pro 🥇</b></td>
-              <td>LMM 🖼️</td>
-              <td><a href="https://github.com/OpenGVLab/InternVL" class="ext-link" style="font-size: 16px;">Link</a></td>
-              <td>2024-09-04</td>
-              <td><b class="best-score-text">65.84</b></td>
-              <td>65.0</td>
-              <td>64.0</td>
-              <td>75.4</td>
-              <td>72.4</td>
-              <td>52.3</td>
-              <td>67.4</td>
-              <td>63.1</td>
-              <td>65.0</td>
-              <td>30.4</td>
-              <td>44.5</td>
-              <td>67.0</td>
-              <td>72.5</td>                                
+              <th>Object</th>
+              <th>Action</th>
+              <th>Visual Loc.</th>
+              <th>Consistency</th>
+              <th>Causality</th>
+              <th>Multimodal Ref.</th>
+              <th>World Knowledge</th>
+              <th>Contextual Ellipsis</th>
+              <th>Cross-turn Retrieval</th>
             </tr>
+          </thead>
+
+          <tbody>
             <tr>
-              <td>2</td>
-              <td><b class="best-score-text">InternVL2-8B-MPO 🥈</b></td>
-              <td>LMM 🖼️</td>
-              <td><a href="https://internvl.github.io/blog/2024-11-14-InternVL-2.0-MPO/" class="ext-link" style="font-size: 16px;">Link</a></td>
-              <td>2024-11-14</td>
-              <td><b class="best-score-text">65.65</b></td>
-              <td>67.4</td> <!-- FQA (figure question answering) -->
-              <td>68.0</td> <!-- GPS (geometry problem solving) -->
-              <td>73.0</td> <!-- MWP (math word problem) -->
-              <td>65.3</td> <!-- TQA (textbook question answering) -->
-              <td>51.5</td> <!-- VQA (visual question answering) -->
-              <td>66.7</td> <!-- ALG (algebraic reasoning) -->
-              <td>60.6</td> <!-- ARI (arithmetic reasoning) -->
-              <td>68.5</td> <!-- GEO (geometry reasoning) -->
-              <td>19.1</td> <!-- LOG (logical reasoning) -->
-              <td>43.1</td> <!-- NUM (numeric commonsense) -->
-              <td>64.9</td> <!-- SCI (scientific reasoning) -->
-              <td>77.1</td> <!-- STA (statistical reasoning) -->                                
+              <td colspan="11"><b>Open-Source LMMs</b></td>
             </tr>
-              <td>3</td>
-              <td><b class="best-score-text">InternVL-Chat-V1.2-Plus 🥉</b></td>
-              <td>LMM 🖼️</td>
-              <td><a href="https://arxiv.org/abs/2312.14238" class="ext-link" style="font-size: 16px;">Link</a></td>
-              <td>2024-02-22</td>
-              <td><b class="best-score-text">60.18</b></td>
-              <td>52.2</td>
-              <td>56.2</td>
-              <td>78.3</td>
-              <td>61.6</td>
-              <td>55.5</td>
-              <td>56.0</td>
-              <td>64.4</td>
-              <td>57.6</td>
-              <td>21.6</td>
-              <td>46.1</td>
-              <td>60.0</td>
-              <td>60.1</td>                                
-            </tr>
+
             <tr>
-              <td>4</td>
-              <td><b class="">InternLM-XComposer2-VL-7B</b></td>
-              <td>LMM 🖼️</td>
-              <td><a href="https://github.com/InternLM/InternLM-XComposer" class="ext-link" style="font-size: 16px;">Link</a></td>
-              <td>2024-01-22</td>
-              <td><b class="">57.93</b></td>
-              <td>53.9</td>
-              <td>56.4</td>
-              <td>77.1</td>
-              <td>58.4</td>
-              <td>43.2</td>
-              <td>54.8</td>
-              <td>57.6</td>
-              <td>58.0</td>
-              <td>16.5</td>
-              <td>47.6</td>
-              <td>59.1</td>
-              <td>62.5</td>                                  
+              <td><b>Mono-InternVL-2B</b></td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
             </tr>
+
             <tr>
-              <td>5</td>
-              <td><b class="">Qwen-VL-Plus</b></td>
-              <td>LMM 🖼️</td>
-              <td><a href="https://github.com/QwenLM/Qwen-VL" class="ext-link" style="font-size: 16px;">Link</a></td>
-              <td>2023-12-26</td>
-              <td><b class="">44.33</b></td>
-              <td>55.9</td>
-              <td>34.7</td>
-              <td>29.7</td>
-              <td>58.8</td>
-              <td>42.4</td>
-              <td>40.7</td>
-              <td>35.4</td>
-              <td>36.6</td>
-              <td>21.6</td>
-              <td>30.4</td>
-              <td>55.9</td>
-              <td>56.3</td>                                  
+              <td><b>InternVL2-8B</b></td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
             </tr>
+
             <tr>
-              <td>6</td>
-              <td><b class="">SPHINX-MoE</b></td>
-              <td>MoE 🤖</td>
-              <td><a href="https://github.com/Alpha-VLLM/LLaMA2-Accessory/tree/main/SPHINX" class="ext-link" style="font-size: 16px;">Link</a></td>
-              <td>2024-01-13</td>
-              <td><b class="">42.68</b></td>
-              <td>50.3</td>
-              <td>29.7</td>
-              <td>40.9</td>
-              <td>49.3</td>
-              <td>43.3</td>
-              <td>33.9</td>
-              <td>43.0</td>
-              <td>29.1</td>
-              <td>14.4</td>
-              <td>26.3</td>
-              <td>46.9</td>     
-              <td>51.2</td>                            
+              <td><b>Qwen2-VL-7B</b></td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
             </tr>
+
             <tr>
-              <td>7</td>
-              <td><b class="">MiniCPM-V-2 (2.8B)</b></td>
-              <td>LMM 🖼️</td>
-              <td><a href="https://github.com/OpenBMB/MiniCPM-V" class="ext-link" style="font-size: 16px;">Link</a></td>
-              <td>2024-04-14</td>
-              <!-- "ALL": 39.89,
-              "FQA": 51.7,
-              "GPS": 27.4,
-              "MWP": 39.8,
-              "TQA": 42.5,
-              "VQA": 34.7,
-              "ALG": 31.3,
-              "ARI": 34.4,
-              "GEO": 30.7,
-              "LOG": 13.4,
-              "NUM": 33.5,
-              "SCI": 38.5,
-              "STA": 50.0 -->
-              <td><b class="">39.89</b></td>
-              <td>51.7</td>
-              <td>27.4</td>
-              <td>39.8</td>
-              <td>42.5</td>
-              <td>34.7</td>
-              <td>31.3</td>
-              <td>34.4</td>
-              <td>30.7</td>
-              <td>13.4</td>
-              <td>33.5</td>
-              <td>38.5</td>
-              <td>50.0</td>                                  
+              <td><b>MiniCPM-V2.6-8B</b></td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
             </tr>
+
             <tr>
-              <td>8</td>
-              <td><b class="">PoT GPT-4 (Caption+OCR)</b></td>
-              <td>Tool 🛠️</td>
-              <td><a href="https://arxiv.org/abs/2310.02255" class="ext-link" style="font-size: 16px;">Link</a></td>
-              <td>2023-10-03</td>
-              <td><b class="">31.74</b></td>
-              <td>27.6</td>
-              <td>37.4</td>
-              <td>23.9</td>
-              <td>43.0</td>
-              <td>30.3</td>
-              <td>37.1</td>
-              <td>27.9</td>
-              <td>37.5</td>
-              <td>22.7</td>
-              <td>15.8</td>
-              <td>44.5</td>
-              <td>31.9</td>                                  
+              <td colspan="11"><b>Commercial LMMs</b></td>
             </tr>
+
             <tr>
-              <td>9</td>
-              <td><b>CoT GPT4 (Caption+OCR)</b></td>
-              <td>Tool 🛠️</td>
-              <td><a href="https://arxiv.org/abs/2310.02255" class="ext-link" style="font-size: 16px;">Link</a></td>
-              <td>2023-10-03</td>
-              <td><b>30.50</b></td>
-              <td>27.2</td>
-              <td>35.9</td>
-              <td>21.3</td>
-              <td>43.1</td>
-              <td>28.2</td>
-              <td>35.7</td>
-              <td>25.2</td>
-              <td>35.8</td>
-              <td>24.7</td>
-              <td>15.4</td>
-              <td>47.3</td>
-              <td>31.3</td>                               
+              <td><b>Claude 3.5 Sonnet</b></td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
             </tr>
+
             <tr>
-              <td>10</td>
-              <td><b>LLaVA (LLaMA-2-13B)</b></td>
-              <td>LMM 🖼️</td>
-              <td><a href="https://arxiv.org/abs/2310.02255" class="ext-link" style="font-size: 16px;">Link</a></td>
-              <td>2023-10-03</td>
-              <td><b>25.40</b></td>
-              <td>22.9</td>
-              <td>24.6</td>
-              <td>18.1</td>
-              <td>35.8</td>
-              <td>29.7</td>
-              <td>26.9</td>
-              <td>22.5</td>
-              <td>24.4</td>
-              <td>19.1</td>
-              <td>19.1</td>
-              <td>34.7</td>
-              <td>21.6</td>                                 
+              <td><b>Gemini 1.5 Flash</b></td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
             </tr>
+
             <tr>
-              <td>*</td>
-              <td><b>Random Chance</b></td>
-              <td>-</td>
-              <td><a href="https://arxiv.org/abs/2310.02255" class="ext-link" style="font-size: 16px;">Link</a></td>
-              <td>2023-10-03</td>
-              <td><b>17.86</b></td>
-              <td>15.5</td>
-              <td>24.1</td>
-              <td>4.5</td>
-              <td>23.4</td>
-              <td>24.3</td>
-              <td>25.8</td>
-              <td>13.8</td>
-              <td>22.7</td>
-              <td>13.4</td>
-              <td>8.8</td>
-              <td>15.8</td>
-              <td>14.3</td>                                                  
-            </tr>                                                      
+              <td><b>Gemini 1.5 Pro</b></td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+            </tr>
+
+            <tr>
+              <td><b>GPT-4V</b></td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+            </tr>
+
+            <tr>
+              <td><b>GPT-4o mini</b></td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+            </tr>
+
+            <tr>
+              <td><b>GPT-4o</b></td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+              <td>XX.X</td>
+            </tr>
+          </tbody>
         </table>
 
           <b>Human Performance*:</b> Average human performance from AMT annotators who have high school diplomas or above.
